<resources>
    <string name="app_name">Weather</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="prompt_user">Please input the City you wish to view</string>
    <string name="search_city">ex: London,ca</string>
    <string name="search_button">Search</string>

    <!-- Weather Display Fields -->
    <string name="temperature">Temperature: </string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure: </string>

</resources>
