<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Weather">

    <TextView
        android:id="@+id/prompt_user"
        android:text="@string/prompt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/search_city"
        android:hint="@string/search_city"
        android:layout_below="@+id/prompt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button"
        android:layout_alignTop="@+id/search_city"
        android:layout_toRightOf="@+id/search_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/weather_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/search_button"
        android:layout_height="75dp">

        <TextView
            android:id="@+id/temperature_text"
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/humidity_text"
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/temperature_text"/>
        <TextView
            android:id="@+id/pressure_text"
            android:text="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/humidity_text"/>
        <TextView
            android:id="@+id/temperature_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/temperature_text"/>
        <TextView
            android:id="@+id/humidity_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/temperature_input"
            android:layout_toRightOf="@+id/humidity_text"/>
        <TextView
            android:id="@+id/pressure_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/humidity_input"
            android:layout_toRightOf="@+id/pressure_text"/>
    </RelativeLayout>

</RelativeLayout>
