<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <TextView
        android:id="@+id/temperature_text"
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/humidity_text"
        android:text="@string/humidity"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/temperature_text"/>
    <TextView
        android:id="@+id/pressure_text"
        android:text="@string/pressure"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/humidity_text"/>
    <TextView
        android:id="@+id/temperature_input"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/temperature_text"/>
    <TextView
        android:id="@+id/humidity_input"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/temperature_input"
        android:layout_toRightOf="@+id/humidity_text"/>
    <TextView
        android:id="@+id/pressure_input"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/humidity_input"
        android:layout_toRightOf="@+id/pressure_text"/>
</RelativeLayout>